tests/samples/positive/types/type_alias_import.ax
module type_alias_import;

import samplelib.aliases as aliases;

fn main() -> i32 {
    var value: aliases.ImportedInt = 40;
    let ptr: aliases.ImportedIntPtr = &value;
    return unsafe { *ptr } - 40;
}
